[tool.poetry]
name = "hangouts-backend"
version = "0.1.0"
description = "Backend для приложения вписок"
authors = ["Your Name <your@email.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"  # ← ИЗМЕНИЛИ С ^3.12 НА ^3.11
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"
alembic = "^1.13.2"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
redis = "^5.0.8"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
